--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/e9fe44bd19.js" crossorigin="anonymous"></script>
+	<script src="https://lib.pan.codes/footer.js?b"></script>
     <title>Jellyfin Multiclient</title>
     <style>
         * {
